objects/Student__c.object
<CustomObject>
    <fields>
        <fullName>StudentCity__c</fullName>
        <label>StudentAddress</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GlobalPickList_Cities</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>StudentInfo__c</fullName>
        <label>StudentInfo</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StudentMobile__c</fullName>
        <label>StudentMobile</label>
        <type>Phone</type>
    </fields>
    <label>Student</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Student Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Students</pluralLabel>
    <recordTypes>
        <fullName>StudentRecord1</fullName>
        <active>true</active>
        <label>StudentRecord1</label>
    </recordTypes>
    <recordTypes>
        <fullName>StudentRecord2</fullName>
        <active>true</active>
        <label>StudentRecord2</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>